Bugfix: Lightened colour of explainer and background boxes in minutes edit view

--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -352,6 +352,10 @@ body {
   margin-bottom: 3px;
 }
 
+.form-group .well {
+  background-color: #dddddd;
+  border: 1px solid #999999;
+}
  
 /* PANELS
 -------------------------------------------------- */
