Bugfix: Enabled linebreaks on background field in minutes edit view

--- a/docs/templates/minutes_edit_ajax_items.html
+++ b/docs/templates/minutes_edit_ajax_items.html
@@ -112,7 +112,7 @@
           <div class="form-group">
             {{ item.background.label_tag }}
             <div class="well well-sm">
-              {{ item.background.value }}
+              {{ item.background.value|linebreaks }}
             </div>
           </div>
         {% endif %}
