Changed feature update notice on dashboard

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -166,8 +166,7 @@
     {% else %}
       <div class="panel-body text-center">
         <br/><br/>
-        <p>There are no tasks due soon.</p><p>Click 
-          the heading of this box to create some.<p/>
+        <p>There are no tasks due soon.</p>
       </div>
     {% endif%}
   </div>  
@@ -180,9 +179,8 @@
 	  eConvenor feature updates
     </div>
     <div class="panel-body text-center">
-      <br/><br/>
-      <p>eConvenor Beta is live!</p>
-      <p>You may have already noticed.</p>
+      <br/>
+      <p>- April 11th -</p><p>It's now possible to edit your account settings.</p><p>Click on your username in the top right-hand corner of the screen, then choose 'account settings'.</p>
     </div>
   </div>  
 </div>
