--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -175,7 +175,7 @@
               <!-- Right column item 3 -->
               <li><i class="fa-li fa fa-users fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Holds your participant's details</p></li>
+                  <li><p class="lead orange">Holds your participants' details</p></li>
                   <li><p>eConvenor keeps a list of your group's participants, plus a summary page for every participant. Each participant's page shows their tasks.</p></li>
                 </ul> 
               </li>              
