Bugfix: Stopped more than 200 characters being accepted in meeting.background field

--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -149,6 +149,9 @@
             digits: true,
             range: [0, 600],
           },
+          "{{ item.prefix }}-background": {
+            maxlength: 200,          
+          },
         {% endfor %}
       },
       messages: {
