--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -647,3 +647,30 @@ tbody tr:hover {
 #ui-datepicker-div {
   z-index: 1010 !important;
 }
+
+/* NOSCRIPT
+-------------------------------------------------- */
+
+#noscript-message {
+  position:fixed;
+  top:45%;
+  left:25%;
+  width:50%;
+  z-index:10000;
+  text-align:center;
+  color:#ffffff;
+  background-color:#ff0066;
+  padding: 20px 0 10px 0;
+}
+
+#noscript-cover {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 9999;
+background-color: #000000;
+opacity: 0.80;
+}
+
