--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-
+    
     <div class="nav navbar navbar-fixed-top" role="navigation">
 
       <div class="container-fluid">
@@ -310,6 +310,15 @@
       </div><!-- /.modal -->        
 
     </div><!-- /.container-fluid -->
+
+    <noscript>
+      <div id="noscript-message">
+        <p>Your browser does not appear to have JavaScript enabled.</p>
+        <p>Please enable Javascript or eConvenor will not work.</p>
+      </div>
+      <div id="noscript-cover">
+      </div>
+    </noscript>
 
     <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
