Edited the welcome.html template

--- a/registration/templates/welcome.html
+++ b/registration/templates/welcome.html
@@ -14,9 +14,7 @@
     </div>
     <div class="panel-body">
       <p>Thanks for setting up an account!</p>
-      <p>At the moment the service is only able to be viewed properly on computers, or on newer tablets. You'll still see it on your phone or older tablet, but things won't appear in the right places on the screen!</p>
-      <p>Also, like other web services, eConvenor doesn't work if your browser has javascript disabled.</p>
-      <p>Please check out the quick-start guide below to get started.<p/>
+      <p>We hope that eConvenor helps your group to be better organised, more efficient and ultimately more successful.</p>
     </div>
   </div>  
 </div>
@@ -24,7 +22,32 @@
 <div class="col-sm-6 col-sm-offset-3">
   <div class="panel panel-default panel-welcome">
     <div class="panel-heading">
-      <i class="fa fa-align-justify fa-fw"></i>&nbsp;
+      <i class="fa fa-flag fa-fw"></i>&nbsp;
+	  Please give us feedback as you use eConvenor
+    </div>
+    <div class="panel-body">
+      <p>Right now, eConvenor is in beta release. This means that we're adding features and fixing bugs all the time.</p>
+      <p>If something doesn't work the way you think it should, or if there is something you'd like eConvenor to do that it doesn't do, let us know! Click on the "Feedback" drop-down in the top right corner of the screen.</p>
+    </div>
+  </div>  
+</div>
+
+<div class="col-sm-6 col-sm-offset-3">
+  <div class="panel panel-default panel-welcome">
+    <div class="panel-heading">
+      <i class="fa fa-laptop fa-fw"></i>&nbsp;
+	  Bigger screens are better
+    </div>
+    <div class="panel-body">
+      <p>At the moment eConvenor only works properly on computers, or on newer tablets.</p.>
+      <p>You can still access eConvenor on your phone or older tablet, but things won't appear in the right places on the screen, so be warned!</p>
+    </div>
+  </div>  
+</div>
+<div class="col-sm-6 col-sm-offset-3">
+  <div class="panel panel-default panel-welcome">
+    <div class="panel-heading">
+      <i class="fa fa-flash fa-fw"></i>&nbsp;
 	  Quick-start guide
     </div>
     <div class="panel-body">
