--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -57,13 +57,13 @@
                 <li><a href={% url 'bug-report' %}>
                   <i class="fa fa-bug fa-fw"></i>&nbsp;
                   Report a bug</a></li>
-                <li><a href={% url 'bug-list' %}>
-                  <i class="fa fa-list-alt fa-fw"></i>&nbsp;
-                  View all bug reports</a></li>
-                <li class="divider"></li>
                 <li><a href={% url 'feature-request' %}>
                   <i class="fa fa-wrench fa-fw"></i>&nbsp;
                   Request a feature/change</a></li>
+                <li class="divider"></li>
+                <li><a href={% url 'bug-list' %}>
+                  <i class="fa fa-list-alt fa-fw"></i>&nbsp;
+                  View all bug reports</a></li>
                 <li><a href={% url 'feature-list' %}>
                   <i class="fa fa-list-alt fa-fw"></i>&nbsp;                  
                   View all feature/change requests</a></li>
@@ -79,7 +79,7 @@
                 Help <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href={% url 'quick-start-guide' %}>
-                  <i class="fa fa-file-text-o fa-fw"></i>&nbsp;
+                  <i class="fa fa-flash fa-fw"></i>&nbsp;
                   Quick-start guide</a></li>
                 <li><a href={% url 'user-guide' %}>
                   <i class="fa fa-file-text-o fa-fw"></i>&nbsp;
