Added more information to dashboard-admin view

--- a/dashboard/templates/dashboard_admin.html
+++ b/dashboard/templates/dashboard_admin.html
@@ -97,7 +97,7 @@
         </tr>
         <tr>
           <td>Number of tasks</td>
-          <td>{{ total_tasks }}</td>
+          <td> {{ total_draft_tasks }} draft &nbsp;/&nbsp; {{ total_incomplete_tasks }} incomplete &nbsp;/&nbsp; {{ total_completed_tasks }} completed &nbsp;/&nbsp; {{ total_tasks }} in total</td>
         </tr>
         <tr>
           <td>Number of decisions</td>
