--- a/docs/templates/minutes_edit_ajax_items.html
+++ b/docs/templates/minutes_edit_ajax_items.html
@@ -355,7 +355,9 @@
         },
         facilitator_actual: "Please select the meeting's facilitator",
         minute_taker_actual: "Please select the meeting's minute-taker",     
-        attendance: "Please enter the names of the people at the meeting",
+        attendance: {
+            required: "Please enter the names of the people at the meeting", 
+        },
         {% for decision in decision_formlist %}
           "{{ decision.prefix }}-description": {
             required: "Please enter the decision which was made",
