--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -57,6 +57,15 @@ label.error {
   font-weight: bold;
 }
 
+.characterCounterDisplay p {
+  margin-bottom: 0px;
+  color: #777777;
+}
+
+.characterCounterDisplay.red p {
+  color: #ff0066;
+}
+
 .red {
   color: #ff0066;
 }
