--- a/tasks/templates/task_add.html
+++ b/tasks/templates/task_add.html
@@ -39,34 +39,28 @@
 {% block extrajs %}
 
 <script>
+
   $(document).ready(function() {
     $("#addtaskform").validate({
       rules: {
-        description: {
-          required: true,
-          maxlength: 80,
-        },
+        description: "required",
         participant: "required",
         deadline: {
           required: true,
           date: true,
         },
-        notes: {
-          maxlength: 300,
-        },
       },
       messages: {
-        description: {
-          required: "Please enter a description of the task",
-        },
+        description: "Please enter a description of the task",
         participant: "Please select the person responsible for the task",
         deadline: {
-          required: "Please enter a deadline for the task",
+          required: "Please select a deadline for the task",
           date: "Please select a valid date from the calendar",
         },
       },
     });
   })
+
 </script>
 
 {% endblock extrajs %}
