Implemented character counter for meeting and document editing views

--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -128,10 +128,7 @@
 
     $("#editagendaform").validate({
       rules: {
-        meeting_no: {
-          required: true,
-          maxlength: 30,          
-        },
+        meeting_no: "required",
         meeting_type: "required",
         date_scheduled: {
           required: true,
@@ -149,23 +146,16 @@
             digits: true,
             range: [0, 600],
           },
-          "{{ item.prefix }}-background": {
-            maxlength: 200,          
-          },
         {% endfor %}
       },
       messages: {
-        meeting_no: {
-          required: "Please enter a number or name for this meeting",
-        },
+        meeting_no: "Please enter a number or name for this meeting",
         meeting_type: "Please select the type of meeting that this is",
         date_scheduled: {
           required: "Please select a date for the meeting",
           date: "Please select a valid date from the calendar",
         },
-        start_time_scheduled: {
-          required: "Please select the meeting's start time",        
-        },
+        start_time_scheduled: "Please select the meeting's start time",        
         location_scheduled: "Please enter the location of the meeting",
         meeting_status: "Please select the current status of the meeting",
         {% for item in item_formlist %}
