Bugfix: Admin dashboard shows correct number of agendas distributed

--- a/dashboard/templates/dashboard_admin.html
+++ b/dashboard/templates/dashboard_admin.html
@@ -109,7 +109,7 @@
         </tr>
         <tr>
           <td>Agendas sent out</td>
-          <td>{{ total_decisions }}</td>
+          <td>{{ total_agendas }}</td>
         </tr>
         <tr>
           <td>Minutes sent out</td>
