Updated the feature updates dashboard section

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -182,9 +182,11 @@
 	  <i class="fa fa-exclamation-triangle fa-fw"></i>&nbsp;
 	  eConvenor feature updates
     </div>
-    <div class="panel-body text-center">
+    <div class="panel-body">
       <br/>
-      <p>- April 11th -</p><p>It's now possible to edit your account settings.</p><p>Click on your username in the top right-hand corner of the screen, then choose 'account settings'.</p>
+      <p><strong>April 19th</strong></p>
+      <p>Fields with length limits now have a character counter. You no longer have to guess if you're writing too much.</p>
+      <p>Agenda and minutes PDFs have been redesigned to look a bit nicer.</p>
     </div>
   </div>  
 </div>
