Bugfix: Spelling in browser header changed to eConvenor

--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" 
           href="{% static 'images/econvenor-favicon-v1.ico' %}">
-    <title>eConvener</title>
+    <title>eConvenor - Your virtual convenor</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/jquery-ui-1.10.4.custom.min.css' %}"
