Added new group countries to dashboard_admin template

--- a/dashboard/templates/dashboard_admin.html
+++ b/dashboard/templates/dashboard_admin.html
@@ -62,6 +62,7 @@
           <tr>
             <th>Group name</th>
             <th>Group aim</th>
+            <th>Country</th>
           </tr>
         </thead>
         <tbody> 
@@ -69,6 +70,7 @@
             <tr>
               <td>{{ group.name }}</td>
               <td>{{ group.aim }}</td>
+              <td>{{ group.country }}</td>
             </tr>
           {% endfor%}
         </tbody>
