--- a/docs/templates/minutes_edit_ajax_items.html
+++ b/docs/templates/minutes_edit_ajax_items.html
@@ -56,10 +56,15 @@
           {{ meeting_form.apologies.errors }}
         </div>
         <div class="form-group">
+          {{ meeting_form.existing_tasks_in_minutes.label_tag}}
+          {{ meeting_form.existing_tasks_in_minutes }}
+          {{ meeting_form.existing_tasks_in_minutes.errors }}
+        </div> 
+        <div class="form-group">
           {{ meeting_form.instructions_actual.label_tag}}
           {{ meeting_form.instructions_actual }}
           {{ meeting_form.instructions_actual.errors }}
-        </div>        
+        </div>               
       </div><!-- /.col -->
     </div><!-- /.panel-body -->
   </div><!-- /.panel -->
