--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -180,17 +180,58 @@
   <div class="panel panel-default panel-dashboard">
     <div class="panel-heading">
 	  <i class="fa fa-exclamation-triangle fa-fw"></i>&nbsp;
-	  eConvenor feature updates
+	  eConvenor updates
     </div>
     <div class="panel-body">
-      <br/>
-      <p><strong>April 19th</strong></p>
-      <p>Fields with length limits now have a character counter. You no longer have to guess if you're writing too much.</p>
-      <p>Agenda and minutes PDFs have been redesigned to look a bit nicer.</p>
+      <p><strong>Improvements made on May 21st</strong></p>
+      <p>1. Summaries of overdue, incomplete and recently completed tasks can now be added to minutes. Look for the check box in the "Meeting details" panel of the minutes editing view to activiate this feature.</p>
+      <p>2. The format of task reminder emails has been overhauled to make them look much nicer.</p>
     </div>
   </div>  
 </div>
 
+<div class="col-sm-6">
+  <div class="panel panel-default panel-dashboard">
+    <div class="panel-heading">
+	  <i class="fa fa-calendar fa-fw"></i>&nbsp;
+	  Features coming next
+    </div>
+    <div class="table-dashboard">
+      <table class="table task-table">
+        <thead>
+          <tr>
+            <th>Feature</th>
+            <th>ETA</th>
+          </tr>
+        </thead>
+        <tbody> 
+          <tr>
+            <td>1. FAQ section</td>
+            <td>22 May</td>
+          </tr>
+          <tr>
+            <td>2. User Guide</td>
+            <td>23 May</td>
+          </tr>
+          <tr>
+            <td>3. Improved Quick Start Guide</td>
+            <td>23 May</td>
+          </tr>
+          <tr>
+            <td>4. Context specific "pro-tips" in the bottom left corner of each page</td>
+            <td>28 May</td>
+          </tr>
+          <tr>
+            <td>5. Agenda templates</td>
+            <td>Early June</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>  
+</div>
+
+{% comment %}
 <div class="col-sm-6">
   <div class="panel panel-default panel-dashboard">
     <div class="panel-heading">
@@ -214,5 +255,6 @@
     </div>
   </div>  
 </div>
+{% endcomment %}
 
 {% endblock %}
